kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bxma
  labels:
    name: bxma
    environment: production
